--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^5.4.0",
+    "@google-cloud/storage": "^6.9.5",
     "@types/express": "^4.17.17",
-    "axios": "^1.3.5",
     "express": "^4.18.2",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.21",
     "openai": "^3.2.1"
   }
