--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/speech": "^5.4.0",
     "@google-cloud/storage": "^6.9.5",
+    "@google-cloud/text-to-speech": "^5.0.1",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "multer": "^1.4.4",
