--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "gpt",
   "version": "1.0.0",
   "description": "",
@@ -16,7 +16,9 @@
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.4",
+    "mysql2": "^3.6.5",
     "nodemon": "^2.0.21",
     "openai": "^3.2.1"
   }
